--- a/src/pages/Search/styles.module.css
+++ b/src/pages/Search/styles.module.css
@@ -1,28 +1,126 @@
 :root {
-    --width-fullTop: 35%;
+  --width-fullTop: 40%;
+  outline: none;
+}
+
+.searchActive {
+  background-color: #e7ecef;
+  box-sizing: border-box;
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
 
 .fullscreenFrame {
-    box-sizing: border-box;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
+  box-sizing: border-box;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
 }
 
 .logoText {
-    box-sizing: border-box;
-    position: relative;
-    top: 0px;
-    left: 0px;
-    padding: 0.5rem;
-    width: 100%;
+  box-sizing: border-box;
+  position: absolute;
+  font-family: Impact, Haettenschweiler, Franklin Gothic Bold, Charcoal,
+    Helvetica Inserat, Bitstream Vera Sans Bold, Arial Black, sans serif;
+  top: 0px;
+  left: 0px;
+  padding: 0.5rem;
+  width: 100%;
+  font-size: 1.4rem;
 }
 
 .fullTop {
-    height: var(--width-fullTop);
+  height: var(--width-fullTop);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+}
+
+.searchBox {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+}
+
+.searchButtonBox {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  padding: 0.5rem;
 }
 
 .fullBottom {
-    height: calc(100% - var(--width-fullTop));
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: calc(100% - var(--width-fullTop));
+  background-image: url("../../assets/images/bg-gradient.png");
+  background-size: cover;
+  border-top-left-radius: 50px;
+  border-top-right-radius: 50px;
+}
+
+.banner > logoImg {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.logoImg > img {
+  width: 12rem;
+}
+.logoImg {
+  text-align: center;
+}
+
+.contCardList {
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  justify-content: stretch;
+  align-items: stretch;
+  padding-top: 1%;
+}
+
+/* Media Queries */
+
+@media all and (max-width: 480px) {
+  :root {
+    --width-fullTop: 100%;
+  }
+
+  .searchActive {
+    height: auto;
+  }
+
+  .logoText {
+    position: relative;
+    top: 0px;
+    width: 100%;
+    text-align: center;
+  }
+
+  .searchBox h2 {
+    padding: 10px;
+    text-align: center;
+  }
+
+  .searchBox SearchField {
+    width: 100%;
+  }
+}
+
+@media all and (min-width: 480px) and (max-width: 768px) {
+}
+
+@media all and (min-width: 768px) and (max-width: 1100px) {
 }
