--- a/src/components/SearchField/styles.module.css
+++ b/src/components/SearchField/styles.module.css
@@ -7,6 +7,8 @@
   width: 80%;
 }
 
+select:invalid { color: gray; }
+
 .sel1 {
   font-family: "Outfit", sans-serif;
   padding: 10px;
@@ -17,6 +19,10 @@
   border-top-left-radius: 50px;
   margin-right: 1px;
   overflow: auto;
+}
+
+.sel1 option[default][disabled][selected] {
+  color: aquamarine;
 }
 
 .sel2 {
