--- a/src/pages/Search/styles.module.css
+++ b/src/pages/Search/styles.module.css
@@ -90,9 +90,60 @@
   align-items: stretch;
   padding-top: 1%;
 }
+/***********SLIDER********/
+.sliderContainer {
+  position: relative;
+  display: flex;
+  align-items: center;
+  width: 50%;
+  height: 7px;
+  background-color: #0292DD;
+  border-radius: 5px;
+  margin-top: 40px;
+  margin-bottom: 20px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+.slider {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 10px;
+  -webkit-appearance: none;
+  appearance: none;
+  outline: none;
+  background-color: transparent;
+}
+
+.slider::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  background-color: #fff;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+  cursor: pointer;
+  transform: translateY(-12px);
+}
+.sliderValue {
+  position: absolute;
+  top: -25px;
+  left: 0;
+  width: 100%;
+  text-align: center;
+  font-size: 14px;
+  font-weight: bold;
+  color: #000000;
+}
 
 /* Media Queries */
-
+@media screen and (max-width: 768px) {
+  .sliderValue{
+    margin-top: -20px;
+  }
+}
 @media all and (max-width: 480px) {
   :root {
     --width-fullTop: 100%;
