--- a/src/pages/MedRecord/styles.module.css
+++ b/src/pages/MedRecord/styles.module.css
@@ -13,7 +13,7 @@ input {
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  height: 100vh;
+  height: 100%;
   background-image: url("../../assets/images/bg1.jpg");
   background-size: cover;
 }
