--- a/src/pages/MedRecord/styles.module.css
+++ b/src/pages/MedRecord/styles.module.css
@@ -87,10 +87,23 @@ input {
   justify-content: space-around;
   width: 100%;
 }
+.prescriptionBox {
+  justify-content: space-between;
+  padding: 0px 10px 10px 10px;
+}
 
 .commonDetailBox {
   justify-content: space-evenly;
   padding: 10px;
+}
+
+.instructionBox {
+  padding: 10px 10px 0px 10px;
+}
+
+.instructionBox> input {
+  
+  width: 100%;
 }
 
 #diagnosis {
@@ -108,27 +121,57 @@ input {
 .drugBox {
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  padding: 10px;
+  justify-content: flex-start;
+
   border: 1px solid blue;
   border-radius: 10px;
+  overflow-y: scroll;
+  height: 15rem;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
+.drugBox::-webkit-scrollbar {
+  width: 0;
 }
 
 .drugHeader {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: space-around;
   width: 100%;
+  position: sticky;
+  top: 0px;
+  background: linear-gradient(
+    113.96deg,
+    rgba(255, 255, 255, 0.8) 0%,
+    rgba(255, 255, 255, 0.4) 100%
+  );
+  border: 1px solid rgba(255, 255, 255, 0.6);
+  box-shadow: 0px 10px 40px rgba(0, 0, 0, 0.15);
 }
 
 .drugH1,
 .drugH2,
 .drugH3 {
+  line-height: 0.2;
   font-size: 0.7rem;
   color: white;
   padding: 0px 10px 0px 10px;
-
+  margin: 8px;
   height: fit-content;
   background: rgba(5, 25, 35, 0.8);
   border-radius: 50px;
+}
+
+.drugItemList {
+  width: 100%;
+}
+
+.drugItem {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  width: 100%;
+  padding: 2.5px;
 }
