--- a/src/pages/Search/styles.module.css
+++ b/src/pages/Search/styles.module.css
@@ -94,19 +94,20 @@
 .sliderContainer {
   position: relative;
   display: flex;
+  justify-content: center;
   align-items: center;
   width: 50%;
   height: 7px;
   background-color: #0292DD;
   border-radius: 5px;
-  margin-top: 40px;
+  margin-top: 25px;
   margin-bottom: 20px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
 .slider {
-  position: absolute;
-  top: 0;
+  position: relative;
+  top: 18px;
   left: 0;
   width: 100%;
   height: 10px;
@@ -125,7 +126,7 @@
   background-color: #fff;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
   cursor: pointer;
-  transform: translateY(-12px);
+  transform: translateY(-18px);
 }
 .sliderValue {
   position: absolute;
