--- a/src/pages/Home/Home.module.css
+++ b/src/pages/Home/Home.module.css
@@ -25,7 +25,7 @@
 }
 
 .logotext {
-	font-family: Impact,Haettenschweiler,Franklin Gothic Bold,Charcoal,Helvetica Inserat,Bitstream Vera Sans Bold,Arial Black,sans serif; 
+	/* font-family: Impact,Haettenschweiler,Franklin Gothic Bold,Charcoal,Helvetica Inserat,Bitstream Vera Sans Bold,Arial Black,sans serif;  */
 	text-align: left;
 	color: white;
 	font-size: 1.5em;
