--- a/src/pages/Dashboard/User/styles.module.css
+++ b/src/pages/Dashboard/User/styles.module.css
@@ -11,18 +11,24 @@
   height: 100vh;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
+  border-top-left-radius: 100px;
+  border-top-right-radius: 100px;
 }
 
 .header {
   width: var(--width-header);
   width: 100%;
   margin: 0;
+  padding: 10px;
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: flex-start;
+  gap: 75%;
   align-items: center;
+  background-image: url("../../../assets/images/bg-gradient.png");
+  background-size: cover;
 }
 
 .logotext {
@@ -37,6 +43,41 @@
   font-size: 1.4rem;
 }
 
+.dropdown > img {
+  color: black;
+  border-radius: 10px;
+  background-color: #f9f9f9;
+  padding: 5px;
+  min-width: max-content;
+}
+
+.dropdown {
+  position: relative;
+  
+  display: inline-block;
+}
+
+.dropdownContent {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  padding: 12px 16px;
+  z-index: 1;
+}
+.dropdownContent> a {
+  padding: 10px;
+  text-decoration: none;
+}
+
+.dropdown:hover .dropdownContent {
+  display: flex;
+  flex-direction: column;
+  cursor: pointer;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+}
+
 .pfBox {
   display: flex;
   flex-direction: row;
@@ -44,16 +85,15 @@
   justify-content: center;
 }
 
-.dropdown {
-  background-color: white;
-  color: black;
-}
-
 .main {
   width: 100%;
-  height: 100% - var(--width-header);
+  height: 90vh;
+  position: absolute;
+  bottom: 0px;
   display: flex;
   flex-direction: column;
+  border-top-left-radius: 100px;
+  border-top-right-radius: 100px;
 }
 
 .mainHeader {
@@ -63,6 +103,8 @@
   justify-content: space-between;
   align-items: center;
   padding: 10px;
+  border-top-left-radius: 100px;
+  border-top-right-radius: 100px;
 }
 
 .mainButtonContainer {
@@ -78,4 +120,75 @@
 .mainBody {
   width: 100%;
   height: max-content;
+  display: flex;
+  flex-direction: column;
+  padding: 60px;
+}
+.dashTop,
+.dashBottom {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  height: 25vh;
+}
+
+.upApp,
+.recApp {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  border: 1px solid black;
+  border-radius: 10px;
+}
+
+.upAppContainer,
+.recAppContainer {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  overflow-y: scroll;
+}
+
+.upAppContainer::-webkit-scrollbar,
+.recAppContainer::-webkit-scrollbar {
+  width: 0;
+}
+
+.dashDivHeader {
+  text-align: center;
+  width: 100%;
+}
+
+.dashDivContent {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+
+
+.MedicalRecords,
+.RecTransactions {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  border: 1px solid black;
+  border-radius: 10px;
+}
+
+.MedicalRecordsContainer,
+.RecTransactionsContainer {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  overflow-y: scroll;
+}
+
+.MedicalRecordsContainer::-webkit-scrollbar,
+.RecTransactionsContainer::-webkit-scrollbar {
+  width: 0;
 }
