--- a/src/pages/Dashboard/User/styles.module.css
+++ b/src/pages/Dashboard/User/styles.module.css
@@ -1,4 +1,4 @@
-@import "~rsuite/dist/rsuite.min.css";
+@import "rsuite/dist/rsuite.css";
 :root {
   --width-header: 10%;
 }
@@ -15,6 +15,19 @@
   align-items: center;
   background-image: url("../../../assets/images/bg-gradient.png");
   background-size: cover;
+}
+
+.modal {
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100vw;
+  height: 100vh;
+  backdrop-filter: blur(2px);
+  top: 0px;
+  left: 0px;
+  z-index: 10;
 }
 
 .header {
@@ -64,12 +77,15 @@
   padding: 12px 16px;
   z-index: 1;
 }
-.dropdownContent > a {
+.dropdownContent > * {
   padding: 10px;
   text-decoration: none;
 }
 
 .dropdown:hover .dropdownContent {
+  position: absolute;
+  top: 15px;
+  right: 0px;
   display: flex;
   flex-direction: column;
   cursor: pointer;
