--- a/src/components/Modal/styles.module.css
+++ b/src/components/Modal/styles.module.css
@@ -2,33 +2,39 @@
 
 .modalDialog {
   border-radius: 10px;
-  border: 10px solid black;
+  border: 10px blur(2px);
+  padding: 10px;
   width: 500px;
   height: 500px;
-
+  background-image: url("../../assets/images/bgimagehighres.png");
+  background-size: cover;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   text-align: center;
-  /* backdrop-filter: blur(2px); */
 }
 
 .inContainer {
   display: flex;
   flex-direction: column;
   align-items: center;
-
   justify-content: center;
   width: 100%;
 }
 
-.centerContainer {
+.centerCont {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  width: 100%;
+  width: 75%;
+}
+
+.centerCont > h4 {
+  position: absolute;
+  top: 6%;
+  font-size: 1.4rem;
 }
 
 .modalContent {
