--- a/src/pages/Dashboard/User/styles.module.css
+++ b/src/pages/Dashboard/User/styles.module.css
@@ -17,6 +17,15 @@
   background-size: cover;
 }
 
+.placeholderCont {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+}
+
 .modal {
   position: absolute;
   display: flex;
@@ -71,15 +80,13 @@
 .dropdownContent {
   display: none;
   position: absolute;
-  background-color: #f9f9f9;
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-  padding: 12px 16px;
+
   z-index: 1;
 }
 .dropdownContent > * {
   padding: 10px;
   text-decoration: none;
+  cursor: pointer;
 }
 
 .dropdown:hover .dropdownContent {
@@ -88,7 +95,10 @@
   right: 0px;
   display: flex;
   flex-direction: column;
-  cursor: pointer;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  padding: 12px 16px;
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
 }
 
