add Update Details btn in EditProfile page

--- a/src/pages/EditProfile/styles.module.css
+++ b/src/pages/EditProfile/styles.module.css
@@ -172,6 +172,11 @@
   justify-content: center;
   align-items: stretch;
   font-size: medium;
+  width: 50%;
+}
+
+.updateBtnBox {
+  text-align: center;
 }
 
 .topFormBox,
