--- a/src/pages/Dashboard/Doc/styles.module.css
+++ b/src/pages/Dashboard/Doc/styles.module.css
@@ -115,11 +115,7 @@
   flex-direction: column;
   border-top-left-radius: 4rem;
   border-top-right-radius: 4rem;
-  background: linear-gradient(
-    113.96deg,
-    rgba(255, 255, 255, 0.8) 0%,
-    rgba(255, 255, 255, 0.4) 100%
-  );
+  background: linear-gradient(133deg, #e7ecef 0%, #e7ecef 100%);
   border: 1px solid rgba(255, 255, 255, 0.6);
   box-shadow: 0px 10px 40px rgba(0, 0, 0, 0.15);
 }
@@ -128,10 +124,9 @@
   display: flex;
   flex-direction: row;
   width: 100%;
-  justify-content: center;
+  justify-content: flex-end;
   align-items: center;
-  gap: 70%;
-  padding: 10px;
+  padding: 0.25rem 2rem 0.25rem 0.25rem;
   border-top-left-radius: 100px;
   border-top-right-radius: 100px;
 }
@@ -148,44 +143,77 @@
 }
 
 .mainBody {
+  
   width: 100%;
-  height: max-content;
+  height: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: stretch;
+  padding: 2rem;
+}
+
+.dashLeft {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  height: 60vh;
+  padding: 0.5rem;
+}
+
+.dashRight {
+   
+  width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  gap: 1.5rem;
-  padding: 60px;
+  height: 100%;
 }
 
-.dashTop,
-.dashBottom {
+.rightTopContainer {
+  width: 100%;
+  height: 50%;
+  display: flex;
+  padding: 0.5rem;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
+.rightBottomContainer {
+  height: 50%;
+  padding: 0.5rem;
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
-  height: 25vh;
+  min-height: 20vh;
+  width: 100%;
 }
 
-.upApp,
-.recApp {
+.upApp {
   display: flex;
-  width: 45vw;
+  width: 35vw;
+  height: 100%;
   flex-direction: column;
   justify-content: space-between;
-  border: 1px solid black;
-  margin: 10px;
-  border-radius: 10px;
+  background-color: #e7ecef;
+  height: 100%;
+  border-radius: 5px;
+  border-bottom-right-radius: 10px;
+  border-bottom-left-radius: 10px;
+  box-shadow: 6px 8px 20px 0px #272c36;
 }
 
 .upAppContainer,
 .recAppContainer {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  height: 100%;
+
   overflow-y: scroll;
-  border-radius: 10px;
+  border-radius: 5px;
 }
 
 .upAppContainer::-webkit-scrollbar,
@@ -199,19 +227,15 @@
   padding: 7px;
   position: sticky;
   top: 0;
-  background: linear-gradient(
-    113.96deg,
-    rgba(255, 255, 255, 0.8) 0%,
-    rgba(255, 255, 255, 0.4) 100%
-  );
+  background: #e7ecef;
   border: 1px solid rgba(255, 255, 255, 0.6);
   box-shadow: 0px 10px 40px rgba(0, 0, 0, 0.15);
-  border-radius: 10px;
+  border-radius: 5px;
 }
 
 .dashDivContent {
   width: 100%;
-  height: 20vh;
+  height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
@@ -219,40 +243,44 @@
   padding: 6px;
 }
 
-.MedicalRecords {
+.recApp {
+  height: 100%;
   display: flex;
-  width: 60vw;
+  flex: 1 1;
+  background: #e7ecef;
   flex-direction: column;
   justify-content: space-between;
-  border: 1px solid black;
-  border-radius: 10px;
+  /* border: 1px solid black; */
   margin: 10px;
+  border-radius: 5px;
+  border-bottom-right-radius: 10px;
+  border-bottom-left-radius: 10px;
+  box-shadow: 6px 8px 20px 0px #272c36;
 }
+
 .RecTransactions {
   display: flex;
-  width: 30vw;
+  height: 100%;
+  flex: 1;
   flex-direction: column;
   justify-content: space-between;
-  border: 1px solid black;
-  border-radius: 10px;
+
   margin: 10px;
+  border-radius: 5px;
+  border-bottom-right-radius: 10px;
+  border-bottom-left-radius: 10px;
+  box-shadow: 6px 8px 20px 0px #272c36;
 }
 
-.MedicalRecordsContainer,
 .RecTransactionsContainer {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  height: 100%;
   overflow-y: scroll;
-  border-radius: 10px;
+  border-radius: 5px;
 }
 
-.MedicalRecordsContainer::-webkit-scrollbar,
 .RecTransactionsContainer::-webkit-scrollbar {
   width: 0;
 }
-
 
 .mainButtonContainer {
   display: flex;
@@ -263,24 +291,4 @@
 .mainNameBox {
   color: black;
   padding: 2px;
-}
-
-.mainBody {
-  width: 100%;
-  height: max-content;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  gap: 1.5rem;
-  padding: 60px;
-}
-
-.dashTop,
-.dashBottom {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
-  height: 25vh;
 }
