--- a/src/pages/UpcomingApp/styles.module.css
+++ b/src/pages/UpcomingApp/styles.module.css
@@ -119,8 +119,8 @@
   border-top-right-radius: 2rem;
   background: linear-gradient(
     113.96deg,
-    rgba(255, 255, 255, 0.8) 0%,
-    rgba(255, 255, 255, 0.4) 100%
+    rgba(255, 255, 255, 1) 0%,
+    rgba(255, 255, 255, 1) 100%
   );
   border: 1px solid rgba(255, 255, 255, 0.6);
   box-shadow: 0px 10px 40px rgba(0, 0, 0, 0.15);
@@ -128,9 +128,9 @@
 
 .mainHeader {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   width: 100%;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
   /* gap: 70%; */
   padding: 3% 0px 0px 0px;
@@ -138,57 +138,156 @@
   border-top-right-radius: 100px;
 }
 
-.mainAvatarContainer {
-  position: absolute;
-  bottom: 90%;
-  /* width: 180px;
-    height: 180px; */
-}
-.mainUploadContainer {
-  position: absolute;
-  bottom: 25px;
-  right: 0px;
+.PlusIconContainer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 5px;
 }
 
-.mainNameBox {
-  color: black;
-  padding: 2px;
+.mainHeadingText {
+  text-align: center;
+  width: max-content;
+  padding: 10px;
 }
 
 .mainBody {
   width: 100%;
   height: max-content;
   display: flex;
-  flex-direction: column;
-  justify-content: center;
+  flex-direction: row;
+  justify-content: stretch;
   align-items: center;
   gap: 1.5rem;
   padding: 60px;
 }
 
-.FormBox {
+.docInfoContainer {
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+}
+
+.appBox {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+}
+.appBoxTop {
+  width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: stretch;
-  font-size: medium;
-  width: 50%;
+  align-items: center;
+  text-align: left;
 }
 
-.updateBtnBox {
-  text-align: center;
+.appBoxTop > p {
+  width: 100%;
+  text-align: left;
 }
 
-.topFormBox,
-.bottomFormBox {
+.appTimeDateBoxContainer {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: flex-start;
   align-items: center;
-  padding: 10px;
+  
+  width: 100%;
 }
 
-.topFormBox > *,
-.bottomFormBox > * {
-  margin: 5px;
+.appTimeDateBox {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
+  border: 1px solid #acacac;
+  border-radius: 10px;
+  padding: 0.3rem;
+}
+
+.appDate {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.appTime {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.pendingStatusBox {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.appBoxBottom {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  margin-top: 0.3rem;
+}
+
+.appBoxBottomLeft {
+  background-color: #e4e4e4;
+  border-radius: 10px;
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  justify-content: stretch;
+  align-items: center;
+  margin: 0.35rem;
+}
+.appBoxBottomLeftHeader {
+  width: 100%;
+  padding: 0.45rem;
+  font-size: medium;
+  /* width: fit-content; */
+}
+
+.appBoxBottomLeftBody {
+  padding: 0.45rem;
+  width: fit-content;
+  height: 30vh;
+}
+
+.appBoxBottomRight {
+  background-color: #e4e4e4;
+  border-radius: 10px;
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  justify-content: stretch;
+  align-items: center;
+  margin: 0.35rem;
+}
+
+.appBoxBottomRightHeader {
+  width: 100%;
+  padding: 0.45rem;
+  font-size: medium;
+}
+
+.appBoxBottomRightBody {
+  width: 100%;
+  padding: 10px;
+  height: 30vh;
+}
+.appBoxBottomRightBody ::-webkit-scrollbar {
+  width: 0;
+}
+
+.presContainer {
+  width: auto;
+  height: 100%;
+  padding: 5px;
+  overflow: scroll;
 }
