--- a/src/pages/Search/styles.module.css
+++ b/src/pages/Search/styles.module.css
@@ -58,6 +58,11 @@
   width: 100%;
 }
 
+.searchHeading {
+  color: #000000;
+  padding-bottom: 2.5rem;
+}
+
 .searchButtonBox {
   display: flex;
   flex-direction: column;
@@ -108,7 +113,7 @@
   align-items: center;
   width: 50%;
   height: 7px;
-  background-color: #0292DD;
+  background-color: #003857;
   border-radius: 5px;
   margin-top: 25px;
   margin-bottom: 20px;
@@ -140,13 +145,12 @@
 }
 .sliderValue {
   position: absolute;
-  top: -25px;
+  top: -75px;
   left: 0;
   width: 100%;
   text-align: center;
-  font-size: 14px;
+  font-size: 1.2rem;
   font-weight: bold;
-  color: #000000;
 }
 
 /* Media Queries */
