--- a/src/pages/Home/Home.module.css
+++ b/src/pages/Home/Home.module.css
@@ -9,8 +9,8 @@
 	flex-direction: column;
 	align-items: center;
 	justify-content: space-between;
-	border: 1% solid black;
-	padding: 1%;
+	border-radius: 1% 0 0 0;
+	/* padding: 1%; */
 	height: 100vh;
 }
 
@@ -41,12 +41,13 @@
 .section {
 	background-image: url('../../assets/images/bg1.jpg');
 	background-size: cover;
-	border-radius: 20px;
+	border-radius: 0 0 30px 30px;
 	display: flex;
 	width: 100%;
 	flex-direction: column;
 	justify-content: flex-start;
 	flex: 1;
+	padding: 1%;
 }
 
 .actualsection {
