--- a/src/pages/Dashboard/User/styles.module.css
+++ b/src/pages/Dashboard/User/styles.module.css
@@ -218,6 +218,9 @@
   align-items: center;
   padding: 6px;
 }
+.eachUpcomingAppointment{
+  width:100%;
+}
 .prevRecords{
   width:100%;
   cursor:pointer;
