--- a/src/pages/AppointmentBooker/styles.module.css
+++ b/src/pages/AppointmentBooker/styles.module.css
@@ -7,7 +7,7 @@
   background-color: #e7ecef;
   box-sizing: border-box;
   width: 100%;
-  height: 100vh;
+  height: 100%;
   display: flex;
   flex-direction: column;
 }
