--- a/src/pages/Home/Home.module.css
+++ b/src/pages/Home/Home.module.css
@@ -1,189 +1,234 @@
 * {
-	font-family: 'Outfit';
-	box-sizing: border-box;
+  font-family: "Outfit";
+  box-sizing: border-box;
 }
 
 .container {
-	box-sizing: border-box;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	justify-content: space-between;
-	border-radius: 1% 0 0 0;
-	/* padding: 1%; */
-	height: 100vh;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  border-radius: 0 0 0 0;
+  /* padding: 1%; */
+  height: 100vh;
 }
 
+#landing {
+}
+.Howitworks {
+  display: flex;
+  flex-direction: column;
+  background-color: #aebcff;
+  height: 100vh;
+  width: 100%;
+  justify-content: center;
+
+  /* border: 10px solid chocolate; */
+}
+.pricing {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 100vh;
+  background-color: blueviolet;
+}
+#contactUs {
+  background-color: aliceblue;
+}
+
+.block {
+  /* border: 10px solid chartreuse; */
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+}
+
+.imgBlock {
+  display: flex;
+  flex-direction: column;
+  padding: 1.3rem;
+}
+
+#howItWorksHeading {
+  color: black;
+  border-radius: 0 0;
+  /* box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.5); */
+  text-align: center;
+  font-size: xxx-large;
+  font-family: "Outfit", sans-serif;
+  padding: 2.5rem;
+  /* background-color: #0b2d62;
+  background-color: #2c928e;
+  background-color: #7a91b3; */
+}
+
+.PatientStepsBox {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: flex-start;
+  padding: 1rem;
+}
 
 .navbar {
-	display: flex;
-	flex-direction: row;
-	flex-basis: auto;
-	align-items: center;
-	justify-content: space-between;
-	padding: 10px;
+  display: flex;
+  flex-direction: row;
+  flex-basis: auto;
+  align-items: center;
+  justify-content: space-between;
+  padding: 10px;
 }
 
 .logotext {
-	/* font-family: Impact,Haettenschweiler,Franklin Gothic Bold,Charcoal,Helvetica Inserat,Bitstream Vera Sans Bold,Arial Black,sans serif;  */
-	text-align: left;
-	color: white;
-	font-size: 1.5em;
-	flex-basis: 100%;
-
+  /* font-family: Impact,Haettenschweiler,Franklin Gothic Bold,Charcoal,Helvetica Inserat,Bitstream Vera Sans Bold,Arial Black,sans serif;  */
+  text-align: left;
+  color: white;
+  font-size: 1.5em;
+  flex-basis: 100%;
 }
-.bannertext{
-	text-align: right;
-	flex-basis: 60%;
+.bannertext {
+  text-align: right;
+  flex-basis: 60%;
 }
-
 
 .section {
-	background-image: url('../../assets/images/bg1.jpg');
-	background-size: cover;
-	border-radius: 0 0 30px 30px;
-	display: flex;
-	width: 100%;
-	flex-direction: column;
-	justify-content: flex-start;
-	flex: 1;
-	padding: 1%;
+  background-image: url("../../assets/images/bg1.jpg");
+  background-size: cover;
+  border-radius: 0 0 30px 30px;
+  display: flex;
+  width: 100%;
+  flex-direction: column;
+  justify-content: flex-start;
+  flex: 1;
+  padding: 1%;
 }
 
 .actualsection {
-	box-sizing: border-box;
-	display: flex;
-	width: 100%;
-	flex-direction: column;
-	align-items: stretch;
+  box-sizing: border-box;
+  display: flex;
+  width: 100%;
+  flex-direction: column;
+  align-items: stretch;
 }
 
 /* Main component Styles: */
 
 .main {
-	display: flex;
-	width: 100%;
-	flex-direction: row;
-	justify-content: space-around;
-	align-items: center;
-	flex: 1;
+  display: flex;
+  width: 100%;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  flex: 1;
 }
 
-.text1{
-	color:white;
-	font-size: 3.75rem;
-	margin:0; 
-	padding: 15px;
+.text1 {
+  color: white;
+  font-size: 3.75rem;
+  margin: 0;
+  padding: 15px;
 }
 
 .text2 {
-	color:black;
-	font-size: 3.75rem;
-	margin:0; 
-	padding: 15px;
+  color: black;
+  font-size: 3.75rem;
+  margin: 0;
+  padding: 15px;
 }
 
 .mainLeft {
-	display: flex;
-	flex-direction: column;
-	justify-content:center;
-	align-items: stretch;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: stretch;
 }
 
 .mainLeftSecond {
-	line-height:1;
-	display: flex;
-	flex-direction: row;
-	align-items: center;
-	justify-content: flex-end;
+  line-height: 1;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: flex-end;
 }
 
 .mainLeftThird {
-
-	display: flex;
-	flex-direction: row;
-	align-items: center;
-	justify-content: space-between;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .mainRight > img {
-	height: 350px;
+  height: 350px;
 }
 
 .mainDown {
-	display: flex;
-	flex-direction: row;
-	align-items: center;
-	justify-content: space-around;
-	width: 50%;
-	padding: 2%;
-	flex: 0.3;
-
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-around;
+  width: 50%;
+  padding: 2%;
+  flex: 0.3;
 }
-
-
 
 /* width of screen between 0px to 480px */
 @media all and (max-width: 480px) {
+  .navbar {
+    flex-direction: column;
+  }
 
-	.navbar {
-		flex-direction: column;
-	}
+  .navbar * {
+    margin: 10px;
+  }
 
-	.navbar * {
-		margin: 10px;
-	}
+  .section {
+    align-items: center;
+  }
 
-	.section {
-		align-items: center;
-	}
+  .text1,
+  .text2 {
+    font-size: 2em;
+  }
 
-	.text1, .text2 {
-		font-size: 2em;
-	}
+  .mainLeftThird > img {
+    height: 40px;
+  }
 
-	.mainLeftThird > img {
-		height: 40px;
-	}
+  .main {
+    width: 100vw;
+    flex-direction: column-reverse;
+  }
+  .mainRight > img {
+    height: 150px;
+  }
 
-	.main {
-		width: 100vw;
-		flex-direction: column-reverse;
-	}
-	.mainRight > img {
-		height: 150px;
-	}
+  .mainDown {
+    flex-direction: column;
+  }
 
-	.mainDown {
-		flex-direction: column;
-	}
-
-	.mainDown * {
-		margin-top: 10px;
-		margin-bottom: 10px;
-	}
+  .mainDown * {
+    margin-top: 10px;
+    margin-bottom: 10px;
+  }
 }
 
 /* width of screen between 480px to 768px */
-@media all and (min-width: 480px) and (max-width: 768px){
-	.section {
-		align-items: center;
-	}
+@media all and (min-width: 480px) and (max-width: 768px) {
+  .section {
+    align-items: center;
+  }
 
-
-	.main {
-		width: 100vw;
-		flex-direction: column-reverse;
-	}
+  .main {
+    width: 100vw;
+    flex-direction: column-reverse;
+  }
 }
 
 /* width of screen between 768px to 1100px */
 @media all and (min-width: 768px) and (max-width: 1100px) {
-	.mainRight > img {
-		height: 250px;
-	}
+  .mainRight > img {
+    height: 250px;
+  }
 }
-
-
-
-
