--- a/src/components/Footer/styles.module.css
+++ b/src/components/Footer/styles.module.css
@@ -18,6 +18,11 @@
 	padding: 1rem;
 }
 
+.trustedImg {
+	padding-left: 0.3rem;
+	padding-right: 0.3rem;
+}
+
 @media all and (max-width: 768px){
 	.footer2 {
 		flex-direction: column;
